# rules_js_repro

./: .bazelignore  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: BUILD.bazel
compiler/: BUILD.bazel  main.js
patches/: @remix-run_dev_1.12.0.patch  browserify-zlib_0.1.4.patch
remixapp/: BUILD.bazel  package.json  remix.config.js  wrangler.toml
remixapp/app/: BUILD.bazel
remixapp/app/routes/: BUILD.bazel
remixapp/public/: BUILD.bazel
